Register auth service

--- a/Movies.Api/appsettings.Development.json
+++ b/Movies.Api/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+  "Database": {
+    "ConnectionString": "Host=localhost;Port=5432;Database=movies-tracking-api;Username=landon577;Password=hHHHeNBZPoFW3jVs"
+  },
+  "Jwt": {
+    "Key": "ForTheLoveOfGodStoreAndLoadThisSecurely",
+    "Issuer": "https://id.nickchapsas.com",
+    "Audience": "https://movies.nickchapsas.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
